# codeblocks_sf

./: configure.ac
src/: CodeBlocks-unix.cbp  CodeBlocks.cbp  CodeBlocks_wx30-unix.cbp  CodeBlocks_wx30.cbp  CodeBlocks_wx30.cbp.orig  CodeBlocks_wx30_64.cbp  update.bat  update30.bat
src/include/: Makefile.am  cbdebugger_interfaces.h  cbplugin.h  cbproject.h  manager.h  menuitemsmanager.h  pluginmanager.h  projectloader.h  scriptingmanager.h  svdparser.h
src/include/scripting/: Makefile.am  sqrat.h
src/include/scripting/bindings/: sc_base_types.h  sc_binding_util.h  sc_cb_vm.h  sc_plugin.h  scriptbindings.h
src/include/scripting/bindings/sq_wx/: sq_wx.h  sq_wxBaseControls.h  sq_wxDialog.h  sq_wx_base_controls.h  sq_wx_dialog.h  sq_wx_propgrid.h  sq_wx_type_handler.h
src/include/scripting/sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratClassType.h  sqratFunction.h  sqratGlobalMethods.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h  sqratVM.h
src/include/scripting/sqrat/sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratClassType.h  sqratConst.h  sqratFunction.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h  sqratVM.h
src/include/scripting/squirrel/: sqdbgserver.h  sqrdbg.h
src/plugins/abbreviations/: Makefile.am  abbreviations.cpp
src/plugins/compilergcc/: Makefile.am  compilergcc.cpp  compilergcc.h
src/plugins/debuggergdb/: Makefile.am  cdb_commands.h  cdb_driver.h  (+7 more)
src/scripts/: ConvertOldToNewScript.script
src/sdk/: Makefile.am  cbplugin.cpp  cbproject.cpp  compilercommandgenerator.cpp  globals.cpp  macrosmanager.cpp  manager.cpp  menuitemsmanager.cpp  pluginmanager.cpp  pluginsconfigurationdlg.cpp  projectloader.cpp  scriptingmanager.cpp
src/sdk/scripting/bindings/: Makefile.am  sc_cb_vm.cpp  sc_consts.cpp  sc_dialog.cpp  sc_globals.cpp  sc_io.cpp  sc_plugin.cpp  sc_progress.cpp  sc_util_dialogs.cpp  sc_wxtypes.cpp  scriptbindings.cpp
src/sdk/scripting/bindings/sq_wx/: sq_util_dialogs.cpp  sq_wx.cpp  sq_wxBaseControls.cpp  sq_wxDialog.cpp  sq_wxString.cpp  sq_wx_base_controls.cpp  sq_wx_constants.cpp  sq_wx_dialog.cpp  sq_wx_propgrid.cpp  sq_wx_string.cpp  sq_wxtypes.cpp
src/src/: Makefile.am  app.cpp  cpuregistersdlg.cpp  cpuregistersdlg.h  main.cpp  projectoptionsdlg.cpp  projectoptionsdlg.h  scriptconsole.cpp  scriptconsole.h  svdparser.cpp
src/wxsmith/: CPURegistersDlg.wxs  ScriptConsole.wxs
(+68 files in other folders)
